--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,11 +1,12 @@
-input:focus {
+/* input:focus {
   -webkit-appearance: none;
 }
 
 select {
   -webkit-appearance: none;
-}
+} */
 
+/* 
 input::-webkit-contacts-auto-fill-button,
 input::-webkit-credentials-auto-fill-button {
   visibility: hidden;
@@ -23,7 +24,7 @@ input:focus {
   outline: none;
   box-shadow: none;
   border-color: initial;
-}
+} */
 
 
 #notification {
